# simple-ots

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/check/routers/: health.py
app/ots/: crud.py  database.py  models.py  schemas.py
app/ots/routers/: ots.py
