[tool.poetry]
name = "simple-ots-service"
version = "0.1.0"
description = ""
authors = ["RK <seriouse8builder@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
SQLAlchemy = "^1.4.4"

[tool.poetry.dev-dependencies]
uvicorn = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
